// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on no click displays the reasons 1`] = `
<div>
  <div
    class="sc-bxivhb kgDyes"
  >
    <h3
      class="sc-ifAKCX hSIQkB"
    >
      Please tell us why.
    </h3>
    <div
      class="sc-bdVaJa kWWNCc"
    >
      <button
        class="
      button
      sc-bwzfXH hZdrme
    "
        data-testid="pill-button"
      >
        It's related, but it didn't answer my question
      </button>
      <button
        class="
      button
      sc-htpNat daVAfG
    "
        data-testid="pill-button"
      >
        It's not related to my question
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="sc-bxivhb kgDyes"
  >
    <h3
      class="sc-ifAKCX hSIQkB"
    >
      Does this article answer your question?
    </h3>
    <div
      class="container buttonCenter "
    >
      <button
        class="
      button
      
    "
        data-testid="pill-button"
      >
        Yes
      </button>
      <button
        class="
      button
      
    "
        data-testid="pill-button"
      >
        No, I need help
      </button>
    </div>
  </div>
</div>
`;
